set surefire config