@@ -90,6 +90,9 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>-Xmx1560m -XX:MaxPermSize=256m</argLine>
+        </configuration>
       </plugin>
     </plugins>
   </build>
